feat: expose player country code in profile
